using UnityEngine;

public class DungeonGenerator : MonoBehaviour
{
    void Generatelayout(string seed)
    {

    }

    void PlaceRooms()
    {
    }

}
