using UnityEngine;

public class FloorProgression : MonoBehaviour
{
    void AdvanceFloor()
    {

    }

    void ReturnToHub()
    {
    }
}
