using UnityEngine;

public class Boss : Enemy
{
    void PhaseTransition()
    {

    }

    void SpecialAttack()
    {
    }
}
