using UnityEditor;
using UnityEngine;

public class Enemy : MonoBehaviour
{
    void TakeDamage()
    {

    }

    void Attack()
    {

    }
}
