using UnityEngine;

public class EnemyAI : MonoBehaviour
{
    void Patrol()
    {

    }

    void Chase()
    {
    }

    void AttackTarget()
    {

    }
}
