using UnityEngine;

public class EnemySpawner : MonoBehaviour
{
    void SpawnEnemies()
    {
    }

    void DespawnAll()
    {

    }
}
