using UnityEditor;
using UnityEngine;

public class AudioManager : MonoBehaviour
{
    void PlaySFX(GUID ID)
    {

    }

    void PlayBGM(GUID ID)
    {
    }

    void fadeBGM(GUID newID)
    {

    }

}
