using UnityEngine;

public class EventManager : MonoBehaviour
{

    void Subscribe(string eventName, string callback)
    {

    }

    void Unsubscribe(string eventName, string callback)
    {
    }

    void Broadcast(string eventName)
    {
    }

}
