using UnityEngine;

public class SaveLoadSystem : MonoBehaviour
{

    bool SaveData()
    {
        return true;
    }

    bool LoadData()
    {
        return true;
    }
}
