using Unity.VisualScripting;
using UnityEngine;

public class Inventory : MonoBehaviour
{
    bool AddItem()
    {
        return true;
    }

    void RemoveItem()
    {
    }

    bool UseItem()
    {
        return true;
    }
}
