using UnityEngine;

public class DialogueUI : MonoBehaviour
{
    void ShowDialogue()
    {

    }

    void AdvanceText()
    {

    }
}
