using UnityEngine;

public class PauseMenu : MonoBehaviour
{
    void Open()
    {

    }

    void Close()
    {
    }

}
