using UnityEngine;

public class ShopUI : MonoBehaviour
{
    void DisplayItems()
    {

    }
    
    bool PurchaseItem()
    {
        return true;
    }
}
