using UnityEngine;

public class PseudoParty : MonoBehaviour
{
    void AutoJoin()
    {

    }

    void AutoLeave()
    {

    }
}
