using UnityEngine;

public class WorldEventManager : MonoBehaviour
{
    void TriggerWorldBoss()
    {

    }

    void ScheduleRaid()
    {

    }
}
