using UnityEngine;

public class PlayerStats : MonoBehaviour
{

    int strength = 0;
    int agility = 0;
    int intelligence = 0;

    void ApplyModifiers()
    {

    }
}
