using UnityEngine;

public class ResourceManager : MonoBehaviour
{
    void ModifyHealth()
    {

    }

    void ModifyMana()
    {

    }

    bool isDead()
    {
        return false;
    }
}
