using UnityEngine;

public class RemoteConsole : MonoBehaviour
{
    void StreamLogs()
    {

    }
}
